--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Pujar{% endblock %}
+{% block title %}Mercado negro{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Pujar</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-user-secret"></i> <small>Mercado negro</small></h1>
                 </div>
             </div>
         </div>
