--- a/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/tax.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Recaudar</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-money"></i> <small>Recaudar dinero</small></h1>
                 </div>
             </div>
         </div>
