--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Investigar hechizos</small></h1>
+                    <h1>Magia <i class="fa fa-fw fa-lg fa-graduation-cap"></i> <small>Investigar hechizos</small></h1>
                 </div>
                 {% set levels = ['danger','warning','success'] %}
                 {% for i in 1..random(10) %}
