--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -7,21 +7,65 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Territorio <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Construir</small></h1>
+                    <h1>Territorio <i class="fa fa-fw fa-lg fa-industry"></i> <small>Construir</small></h1>
                 </div>
                 <div class="panel panel-primary">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-globe"></i> Construir</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-industry"></i> Construir</div>
                     <div class="panel-body">
                         <div class="row">
-                            <div class="col-xs-4">
+                            <div class="col-sm-4 hidden-xs">
                                 <img src="{{ asset('bundles/archmagegame/images/kingdom/terrain.jpg') }}">
                             </div>
-                            <div class="col-xs-8">
-                                <br>
-                                <p>Aquí puedes enviar exploradores para buscar más tierras sin dueño y añadirlas a tu reino. De esta forma incrementarás la cantidad de edificios que podrás construir. Recuerda que, cuantas más tierras poseas ya, menos encontrarás al explorar, hasta un máximo de 3500...</p>
+                            <div class="col-sm-8">
+                                <table class="table table-responsive">
+                                    <thead>
+                                    <tr>
+                                        <th></th>
+                                        <th>Nombre</th>
+                                        <th>Cantidad</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr><tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr><tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr><tr>
+                                        <th scope="row">1</th>
+                                        <td>Escudo de armas</td>
+                                        <td>5</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="well well-lg">
+                    <p>Aquí puedes enviar exploradores para buscar más tierras sin dueño y añadirlas a tu reino. De esta forma, incrementarás la cantidad de edificios que podrás construir. Recuerda que, cuantas más tierras poseas ya, menos encontrarás al explorar, hasta un máximo de 3500.</p>
                 </div>
             </div>
         </div>
