--- a/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/inbox.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Mensajes <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Bandeja de entrada</small></h1>
+                    <h1>Mensajes <i class="fa fa-fw fa-lg fa-envelope"></i> <small>Bandeja de entrada</small></h1>
                 </div>
             </div>
         </div>
