--- a/src/Archmage/GameBundle/Resources/views/Account/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/summary.html.twig
@@ -1,13 +1,13 @@
 {% extends "ArchmageGameBundle::layout.html.twig" %}
 
-{% block title %}Usar{% endblock %}
+{% block title %}Cuenta{% endblock %}
 
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Magia <i class="fa fa-fw fa-lg fa-joomla"></i> <small>Usar artefactos</small></h1>
+                    <h1>Cuenta <i class="fa fa-fw fa-lg fa-user"></i> <small>Resumen</small></h1>
                 </div>
             </div>
         </div>
