--- a/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/recruit.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Ejército <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Reclutar</small></h1>
+                    <h1>Ejército <i class="fa fa-fw fa-lg fa-user-plus"></i> <small>Reclutar tropas</small></h1>
                 </div>
             </div>
         </div>
