--- a/src/Archmage/GameBundle/Resources/views/Kingdom/hire.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/hire.html.twig
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header text-center">
-                    <h1>Reino <i class="fa fa-fw fa-lg fa-bar-chart"></i> <small>Contratar</small></h1>
+                    <h1>Reino <i class="fa fa-fw fa-lg fa-beer"></i> <small>Visitar taberna</small></h1>
                 </div>
             </div>
         </div>
