--- a/src/Archmage/GameBundle/Resources/views/navbar.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/navbar.html.twig
@@ -2,7 +2,7 @@
     <div class="container"><!--container-fluid-->
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapsable">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -11,55 +11,57 @@
             <a class="navbar-brand" href="{{ path('archmage_game_home_index') }}"><i class="fa fa-fw fa-lg fa-eye"></i> ArchMage</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" id="navbar-collapsable">
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-money"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-institution"></i> Reino<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_kingdom_summary') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_summary') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
-                        <li><a href="{{ path('archmage_game_kingdom_tax') }}"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar</a></li>
-                        <li><a href="{{ path('archmage_game_kingdom_hire') }}"><i class="fa fa-fw fa-lg fa-beer"></i> Contratar</a></li>
-                        <li><a href="{{ path('archmage_game_kingdom_auction') }}"><i class="fa fa-fw fa-lg fa-shopping-cart"></i> Pujar</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_tax') }}"><i class="fa fa-fw fa-lg fa-money"></i> Recaudar dinero</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_hire') }}"><i class="fa fa-fw fa-lg fa-beer"></i> Visitar taberna</a></li>
+                        <li><a href="{{ path('archmage_game_kingdom_auction') }}"><i class="fa fa-fw fa-lg fa-user-secret"></i> Mercado negro</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-globe"></i> Territorio<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_territory_summary') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_territory_summary') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
-                        <li><a href="{{ path('archmage_game_territory_explore') }}"><i class="fa fa-fw fa-lg fa-search"></i> Explorar</a></li>
-                        <li><a href="{{ path('archmage_game_territory_build') }}"><i class="fa fa-fw fa-lg fa-wrench"></i> Construir</a></li>
-                        <li><a href="{{ path('archmage_game_territory_demolish') }}"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar</a></li>
+                        <li><a href="{{ path('archmage_game_territory_explore') }}"><i class="fa fa-fw fa-lg fa-search"></i> Explorar terrenos</a></li>
+                        <li><a href="{{ path('archmage_game_territory_build') }}"><i class="fa fa-fw fa-lg fa-industry"></i> Construir edificios</a></li>
+                        <li><a href="{{ path('archmage_game_territory_demolish') }}"><i class="fa fa-fw fa-lg fa-bomb"></i> Derribar edificios</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-magic"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-flask"></i> Magia<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_magic_summary') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_magic_summary') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
-                        <li><a href="{{ path('archmage_game_magic_charge') }}"><i class="fa fa-fw fa-lg fa-tint"></i> Cargar</a></li>
-                        <li><a href="{{ path('archmage_game_magic_conjure') }}"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar</a></li>
-                        <li><a href="{{ path('archmage_game_magic_research') }}"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar</a></li>
-                        <li><a href="{{ path('archmage_game_magic_artifact') }}"><i class="fa fa-fw fa-lg fa-cubes"></i> Artefactos</a></li>
+                        <li><a href="{{ path('archmage_game_magic_charge') }}"><i class="fa fa-fw fa-lg fa-tint"></i> Cargar maná</a></li>
+                        <li><a href="{{ path('archmage_game_magic_conjure') }}"><i class="fa fa-fw fa-lg fa-magic"></i> Conjurar hechizos</a></li>
+                        <li><a href="{{ path('archmage_game_magic_research') }}"><i class="fa fa-fw fa-lg fa-graduation-cap"></i> Investigar hechizos</a></li>
+                        <li><a href="{{ path('archmage_game_magic_artifact') }}"><i class="fa fa-fw fa-lg fa-joomla"></i> Usar artefactos</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-flag-checkered"></i> Ejército<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_army_summary') }}"><i class="fa fa-fw fa-lg fa-line-chart"></i> Resumen</a></li>
+                        <li><a href="{{ path('archmage_game_army_summary') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
-                        <li><a href="{{ path('archmage_game_army_recruit') }}"><i class="fa fa-fw fa-lg fa-check"></i> Reclutar</a></li>
-                        <li><a href="{{ path('archmage_game_army_disband') }}"><i class="fa fa-fw fa-lg fa-ban"></i> Desbandar</a></li>
-                        <li><a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-crosshairs"></i> Atacar</a></li>
+                        <li><a href="{{ path('archmage_game_army_recruit') }}"><i class="fa fa-fw fa-lg fa-user-plus"></i> Reclutar tropas</a></li>
+                        <li><a href="{{ path('archmage_game_army_disband') }}"><i class="fa fa-fw fa-lg fa-user-times"></i> Desbandar tropas</a></li>
+                        <li><a href="{{ path('archmage_game_army_attack') }}"><i class="fa fa-fw fa-lg fa-flag"></i> Atacar</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-user"></i> Nombre<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-fw fa-lg fa-user"></i> Cuenta<span class="fa fa-fw fa-lg fa-caret-down"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="{{ path('archmage_game_mail_inbox') }}"><i class="fa fa-fw fa-lg fa-envelope"></i> Mensajes</a></li>
+                        <li><a href="{{ path('archmage_game_account_summary') }}"><i class="fa fa-fw fa-lg fa-bar-chart"></i> Resumen</a></li>
                         <li class="divider"></li>
-                        <li><a href="#"><i class="fa fa-fw fa-lg fa-sign-out"></i> Cerrar sesión</a></li>
+                        <li><a href="{{ path('archmage_game_account_inbox') }}"><i class="fa fa-fw fa-lg fa-envelope"></i> Bandeja de entrada</a></li>
+                        <li><a href="{{ path('archmage_game_account_inbox') }}"><i class="fa fa-fw fa-lg fa-send"></i> Enviar mensaje</a></li>
+                        <li><a href="#"><i class="fa fa-fw fa-lg fa-sign-out"></i> Salir</a></li>
                     </ul>
                 </li>
             </ul>
